<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="content">更新内容：</string>
    <string name="new_version">新版本</string>
    <string name="size">新版本大小：</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_icon">icon</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="update_liangdian">更新亮点</string>
    <string name="version">最新版本：</string>
    <string name="Toast_link">悟空遥控已连接您的</string>
    <string name="Toast_start">成功启动</string>
    <string name="Toast_uninstall">通过悟空遥控完成卸载操作</string>
    <string name="UMUpdateCheck">2.6.0.20150211</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">悟空遥控</string>
    <string name="btn_rl_log">Log</string>
    <string name="cache_clean_cache_size">释放空间%s</string>
    <string name="cache_clean_ed">清理完成</string>
    <string name="cache_clean_ing">立即清理</string>
    <string name="cache_clean_item">清理项</string>
    <string name="cache_clean_no_cache">无需清理</string>
    <string name="cache_clean_no_sdcard">设备无需清理</string>
    <string name="cache_clean_process">清理中</string>
    <string name="cache_scan_ing">正在扫描</string>
    <string name="change_m3u8">加载时间有点长，已经给您切换到了另一线路</string>
    <string name="childlock_start_a_quarter">儿童锁已开启，15分钟后锁屏！</string>
    <string name="childlock_start_halfhour">儿童锁已开启，半小时后锁屏！</string>
    <string name="childlock_start_hour">儿童锁已开启，一小时后锁屏！</string>
    <string name="clean_finish">清理完成</string>
    <string name="clean_ing">正在加速</string>
    <string name="clean_memory">释放内存</string>
    <string name="clean_memory_def">0Mb</string>
    <string name="clean_speed_up">提速</string>
    <string name="clean_speed_up_def">0%</string>
    <string name="clearing_memory">正在清理空间，请稍后安装</string>
    <string name="default_server_name">智能电视</string>
    <string name="devices">设备名称</string>
    <string name="download_waitcount">待下载：%s个</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="ext_data_no_available">外部存储data不可用</string>
    <string name="ext_download_no_available">外部存储Download不可用</string>
    <string name="friendly_remainder">温馨提示</string>
    <string name="hasgonecarlor">卡路里消耗</string>
    <string name="hello_world">Hello world!</string>
    <string name="ime_hint">悟空遥控器设置完毕，重启设备就能看最新大片了！</string>
    <string name="ime_hint_hisense">"请在此界面重启电视，确保悟空遥控设置完毕
【点击原装遥控器关机按钮，再重新开机】"</string>
    <string name="ime_install_guider">"只差一步就可以使用悟空遥控器完整功能啦！
【将输入法设置为“悟空输入法”】"</string>
    <string name="ime_name">悟空输入法</string>
    <string name="ime_ok">知道了</string>
    <string name="info1">将电视遥控权交给手机</string>
    <string name="info2">"在家的任何位置都可以
遥控你的电视"</string>
    <string name="info4">"*扫描二维码立即体验
*官方网址：www.wukongtv.com"</string>
    <string name="install_failure">*安装插件失败，稍候请重试</string>
    <string name="install_ing">正在安装…</string>
    <string name="install_ok">安装</string>
    <string name="install_success">悟空遥控为您安装应用成功！</string>
    <string name="install_text">"*需要安装遥控必备插件，以便悟空
遥控连接您的设备。"</string>
    <string name="install_wait">请耐心等待</string>
    <string name="intetnet_disconnect_text">当前网络连接不可用，请检查网络连接…</string>
    <string name="ios_update">提示:悟空遥控iPhone旧版已不再更新，请扫描二维码下载新版！</string>
    <string name="ka">卡</string>
    <string name="keyboard_del">删除</string>
    <string name="keyboard_enter">确定</string>
    <string name="keyboard_space">空格</string>
    <string name="local_play_error">本地视频播放失败，为您播放线上视频！</string>
    <string name="mian_hua_tang">棉花糖游戏大厅</string>
    <string name="more_tv">电视猫</string>
    <string name="network_failed">网络请求失败</string>
    <string name="network_good">网络畅通</string>
    <string name="network_may_wrong">网络貌似有问题</string>
    <string name="new_version_found">悟空遥控更新</string>
    <string name="noquit">我要继续观看</string>
    <string name="notification_remote_running">悟空遥控正在运行…</string>
    <string name="ok">确定</string>
    <string name="player_buffering_text">正在努力为您加载，请稍候</string>
    <string name="player_network">可能由于网络原因，当前视频无法播放</string>
    <string name="player_quit_toast">再按一次退出播放</string>
    <string name="player_settings_disclaimer">本视频内容来自优酷</string>
    <string name="player_settings_disclaimer_iqiyi">本视频内容来自爱奇艺</string>
    <string name="player_settings_disclaimer_note">本视频内容来自</string>
    <string name="player_settings_disclaimer_tengxun">本视频内容来自腾讯视频</string>
    <string name="playlocalvideo">播放本地视频失败，正在为您加载网络视频~</string>
    <string name="power_off_cancel_hint">按任意键取消关机</string>
    <string name="power_off_text">&lt;font color=#fd5353>%s&lt;/font>&lt;font color=#535353>秒后将自动关机&lt;/font></string>
    <string name="power_off_title">关机提示</string>
    <string name="push_screen_error">推送失败，请稍后重试</string>
    <string name="pushscreen_image_error">图片投屏失败，请稍后重试！</string>
    <string name="pushscreen_loading">正在努力为您加载，请稍后…</string>
    <string name="qihu">360电视卫士</string>
    <string name="reboot_reminder">急需重启</string>
    <string name="set_immediate">立即设置</string>
    <string name="setting">设置</string>
    <string name="shut_down_after_30_sec">30秒之后自动关机</string>
    <string name="shut_down_delay">将于%d分钟后关机</string>
    <string name="sidebar_cancel">取消</string>
    <string name="sidebar_noprompt">不再提示</string>
    <string name="suning">苏宁易购</string>
    <string name="surplus_memory_lack">剩余空间不足</string>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>
    <string name="title_activity_install_plugin">InstallPlugin</string>
    <string name="title_activity_proxy">ProxyActivity</string>
    <string name="toast_app_open">正在打开</string>
    <string name="toast_app_uninstal_success">卸载成功</string>
    <string name="toast_install_enqueued">正在为您安装由悟空遥控发来的应用</string>
    <string name="toast_install_error">安装失败</string>
    <string name="toast_install_inqueue">该应用正在安装中，请耐心等待</string>
    <string name="toast_install_installed">应用已安装</string>
    <string name="toast_installing">正在安装%1$s</string>
    <string name="toast_installing_app">正在下载</string>
    <string name="toast_installing_faild">%1$s下载失败，请稍后重新安装</string>
    <string name="toast_installing_success">%1$s安装成功</string>
    <string name="toast_installing_system_ui">请在安装界面操作</string>
    <string name="toast_installings">正在安装%1$s等%2$d个应用</string>
    <string name="toast_memory_clean">清理内存成功！您的电视已经充满活力！</string>
    <string name="toast_opening_app">悟空遥控正在打开%s</string>
    <string name="toast_remote_connected">悟空遥控已经连接您的</string>
    <string name="toast_uninstall_app">请通过悟空遥控完成卸载操作</string>
    <string name="toastl_app_uninstal">正在卸载</string>
    <string name="toastl_app_uninstal_success">卸载成功</string>
    <string name="toinstall">请您安装插件，以便正常使用</string>
    <string name="tuzi">兔子视频</string>
    <string name="tuzivideo_open_video">正在打开兔子视频</string>
    <string name="tv_home_shaomiaotitle">扫描下载手机端</string>
    <string name="txt_box_status">您的盒子已经达到最佳状态</string>
    <string name="txt_box_status_desc">最佳状态</string>
    <string name="txt_clean_cache_zero">0</string>
    <string name="txt_clean_cache_zero_persent">0%</string>
    <string name="txt_current_version">当前版本号：</string>
    <string name="txt_get_url_error">获取播放地址时出错，请重试！</string>
    <string name="txt_network_ip">当前IP:</string>
    <string name="txt_network_wifi">当前WIFI:</string>
    <string name="txt_result_is_null">没有找到相应资源，请检查网络是否正常。</string>
    <string name="txt_speedball_descripinfo">"&lt;font color='#FFFF00'>悟空遥控器&lt;/font>"</string>
    <string name="txt_speedball_descripinfo_suffix">"&lt;font color='#FFFFFF'>&lt;small>为了您清理了&lt;/small>&lt;/font>"</string>
    <string name="txt_speedball_mem_suffix">内存</string>
    <string name="txt_speedball_memroy_prefix">共清理了</string>
    <string name="txt_speedball_no_need_clean">无需清理</string>
    <string name="txt_speedball_percent_prefix">悟空遥控为您提升了</string>
    <string name="txt_speedball_suffix">性能提升%1$s,清理内存%2$s</string>
    <string name="txt_webview_loading">加载中请稍后…</string>
    <string name="txt_wkremote_toast">悟空遥控提示您：</string>
    <string name="uninstall_preloaded">卸载预装</string>
    <string name="uninstall_preloaded_faild">卸载失败</string>
    <string name="uninstall_preloaded_faild_content">您的电视/盒子还未root,请root后再试!</string>
    <string name="uninstall_preloaded_succeed">成功卸载：%s</string>
    <string name="update_not_now">以后在说</string>
    <string name="update_now">立即更新</string>
    <string name="valuestype">default</string>
    <string name="vision_press_anykeyback">按任意键退出</string>
    <string name="vision_protect_act_msg">已经连续看了%s个小时了，休息一下吧！</string>
    <string name="vision_protect_act_msg15">已经连续看了%s分钟了，休息一下吧！</string>
    <string name="vision_protect_title">绿色保护视力</string>
    <string name="vision_protect_view_bottom">悟空遥控器儿童锁功能为您锁定屏幕，保护孩子视力。</string>
    <string name="vision_protect_view_msg">已经看了有一会儿了，休息一下吧！</string>
    <string name="vst2">VST全聚合</string>
    <string name="wk_hint">配合悟空遥控器使用，效果更佳</string>
</resources>
