<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="#fff3f3f3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:textColor="#ff898989" android:gravity="center" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/power_off_title" />
        <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="26.0sp" android:layout_gravity="center" android:id="@id/count_down_text" android:paddingLeft="32.0dip" android:paddingTop="16.0dip" android:paddingRight="32.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shut_down_after_30_sec" />
        <TextView android:textSize="26.0sp" android:textColor="#ff535353" android:layout_gravity="center" android:paddingLeft="32.0dip" android:paddingTop="8.0dip" android:paddingRight="32.0dip" android:paddingBottom="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_off_cancel_hint" />
    </LinearLayout>
</FrameLayout>