<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff71b37a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="160.0dip" android:src="@drawable/childlock_pic" />
    <TextView android:textSize="50.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/tv_childlock_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/vision_protect_view_msg" android:layout_centerHorizontal="true" />
    <TextView android:textSize="28.0sp" android:textColor="#ffbfdbc4" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/vision_protect_view_bottom" android:layout_weight="1.0" android:layout_centerHorizontal="true" />
    <TextView android:textSize="28.0sp" android:textColor="#ffbfdbc4" android:gravity="center" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/vision_press_anykeyback" android:drawableLeft="@drawable/childlock_bottom_icon" android:drawablePadding="10.0dip" />
</LinearLayout>