<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@id/cache_top" android:background="@drawable/cache_clean_top_bg" android:layout_width="300.0dip" android:layout_height="260.0dip">
        <RelativeLayout android:id="@id/scan_cache_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/scan_wait" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cache_clean_wait" android:layout_centerInParent="true" />
            <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/cache_clean_text_color" android:id="@id/percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_clean_cache_zero_persent" android:layout_centerInParent="true" />
        </RelativeLayout>
        <ImageView android:id="@id/scan_complete" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cache_clean_scan_complete" />
        <RelativeLayout android:id="@id/cachefile_count_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="@color/cache_clean_text_color" android:id="@id/file_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_clean_cache_zero" android:layout_centerHorizontal="true" />
            <TextView android:textSize="22.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cache_clean_item" android:layout_below="@id/file_count" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/clean_complete_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="30.0sp" android:textColor="@android:color/white" android:id="@id/clean_cache_complete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cache_clean_ed" />
            <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/clean_cache_file_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/clean_cache_complete" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/clean_cache_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/clean_wait" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cache_clean_wait" android:layout_centerInParent="true" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cache_clean_begin" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:background="@drawable/cache_clean_buttom_bg" android:layout_width="300.0dip" android:layout_height="120.0dip" android:layout_below="@id/cache_top">
        <Button android:textSize="22.0sp" android:textColor="@android:color/white" android:id="@id/message_bt" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/cache_scan_ing" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>