<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#99232323" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/umeng_update_dialog_bg" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff63c2ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_version_found" android:layout_centerInParent="true" />
            <Button android:id="@id/umeng_update_id_close" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:background="#ff2aacff" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
        <ScrollView android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffaaabaf" android:id="@id/tv_update_text" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/yes" android:background="@drawable/umeng_update_button_ok_bg_selector" android:padding="12.0dip" android:nextFocusLeft="@id/no" android:nextFocusRight="@id/no" android:nextFocusUp="@id/no" android:nextFocusDown="@id/no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/update_now" android:layout_weight="1.0">
                <requestFocus />
            </Button>
            <Button android:textColor="#ffaaabaf" android:gravity="center" android:id="@id/no" android:background="@drawable/umeng_update_button_cancel_bg_selector" android:padding="12.0dip" android:nextFocusLeft="@id/yes" android:nextFocusRight="@id/yes" android:nextFocusUp="@id/yes" android:nextFocusDown="@id/yes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/update_not_now" android:layout_weight="1.0" />
            <Button android:textColor="#ffaaabaf" android:gravity="center" android:id="@id/umeng_update_id_ignore" android:background="@drawable/umeng_update_button_cancel_bg_selector" android:padding="12.0dip" android:focusable="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="Ingore this" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>